[tool.poetry]
name = "inviz-hosted"
version = "0.1.0"
description = ""
authors = ["InvisibleUp <invisibleup@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
jinja2 = "^2.10"
toml = "^0.10.0"
markdown = "^3.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
mypy = "^0.670.0"
pylint = "^2.2"
